files/assets/css/main.css
/* ... */
.comment-actions > * {
	color: var(--gray-100);
	text-decoration: none;
	text-align: left;
	margin-bottom: 2px;
	font-size: 1rem;
	font-weight: 600;
}

.comment-actions *:hover {
	color: var(--black);
}

.actionbtns > *:not(.d-none) {
	display: inline !important;
	margin-bottom: 10px !important;
	margin-right: 5px !important;
}
.actionbtns > form > * {
	margin-bottom: 10px !important;
}
#desktop-expanded-image {
	max-height:80vh;
	border:5px white solid;
	-o-object-fit: contain;
	object-fit: contain;
}
.fas.fa-ellipsis-h {
	margin: 0 0.15rem 0 0 !important;
}
.pop-badge {
	width: 32px;
	height: 35px;
	object-fit: contain;
	-o-object-fit: contain;
}

.site-banner {
	width: 100%;
}
.site-banner-hole {
	width: 100%;
	object-fit: cover;
	max-height: min(42vh,30vw) !important;
}

@media (max-width: 768px) {
	#twitter-widget-0 {
		max-height: 50vh;
		overflow: scroll;
	}
}

